err/products.queuecatalog.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/QueueCatalog'...
Compiling './lib/python3.5/site-packages/Products/QueueCatalog/CatalogEventQueueSet.py'...
***   File "./lib/python3.5/site-packages/Products/QueueCatalog/CatalogEventQueueSet.py", line 125
    raise ValueError, "'delegate' doesn't implement ICEQSD!"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/QueueCatalog/dtml'...
Listing './lib/python3.5/site-packages/Products/QueueCatalog/help'...
Listing './lib/python3.5/site-packages/Products/QueueCatalog/tests'...
Compiling './lib/python3.5/site-packages/Products/QueueCatalog/tests/test_CatalogEventQueueSet.py'...
***   File "./lib/python3.5/site-packages/Products/QueueCatalog/tests/test_CatalogEventQueueSet.py", line 91
    raise AssertionError, 'Duplicate'
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/QueueCatalog/www'...
Listing './lib/python3.5/site-packages/Products.QueueCatalog-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
